--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/404.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/navbar.css">
-    <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/contact.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/footer.css">
 
 </head>
 <body>
@@ -130,9 +130,42 @@
         </div>
     </section>
    
+    <div class="footer-image">
+        <!-- <img src="../IMAGES/HOME/footer.png" alt="footer image"> -->
+    </div>
+
     <div class="footer">
-        <p>COPYRIGHT &COPY; 2021 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED
-        </p>
+        <div class="content">
+            <div class="box one">
+                <div class="logo"><img src="../IMAGES/HOME/VR new logo white.webp" alt=""></div>
+                <p>Velocita Racing is an exclusive Combustion Class Formula Student Team from Ramaiah Institute of Technology, Bangalore, Karnataka IN</p>
+                <ul>
+                    <li><a href="mailto:velocitaracing.rit@gmail.com?Subject=Hey%20Velocita!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                    <li><a href="https://www.facebook.com/velocitaracing/"><i class="fa fa-facebook fa-2x"></i></a></li>
+                    <li><a href="https://www.instagram.com/officialvelocitaracing/"><i class="fa fa-instagram fa-2x"></i></a></li>
+                    <li><a href="https://twitter.com/RacingVelocita"><i class="fa fa-twitter fa-2x"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/velocitaracing"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                    <li><a href="https://www.youtube.com/c/velocitaracing"><i class="fa fa-youtube fa-2x"></i></a></li>
+                </ul>
+            </div>
+            <div class="box two">
+                <p>QUICK LINKS</p>
+                <ul>
+                    <li><a href="javascript:void(0);">Sponsors</a></li>
+                    <li><a href="javascript:void(0);">Narkha X Velocita</a></li>
+                    <li><a href="javascript:void(0);">Team 2021</a></li>
+                    <li><a href="javascript:void(0);">Recruitment 2021</a></li>
+                    <li><a href="javascript:void(0);">Site Map</a></li>
+                    <li><a href="javascript:void(0);">Crowd Fuding</a></li>
+                    <li><a href="javascript:void(0);">Downloads</a></li>
+                    <li><a href="javascript:void(0);">Events</a></li>
+                </ul>
+            </div>
+            <div class="box three">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.0701973220653!2d77.56377431413576!3d13.031201717095128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae176357ea8ee5%3A0x6e434f12ca381f25!2sVelocita%20Racing!5e0!3m2!1sen!2sin!4v1617909491971!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p>COPYRIGHT &COPY; 2021 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED</p>
     </div>
 
 
