--- a/careers/index.html
+++ b/careers/index.html
@@ -142,7 +142,7 @@
     <section id="home" class="career-home">
         <div id="career-box-main" class="careers-content">
 
-            <div class="heading">
+            <div id="career-heading-new" class="heading">
                 <h2>Student Career Areas</h2>
                 <img src="../IMAGES/HOME/icons8-double-up.gif" alt="">
             </div>
