--- a/careers/index.html
+++ b/careers/index.html
@@ -144,6 +144,7 @@
 
             <div id="career-heading-new" class="heading">
                 <h2>Student Career Areas</h2>
+                <p style="font-size: 18px; font-weight: 500; margin: 10px 0;">PAGE UNDER DEVELOPMENT</p>
                 <img src="../IMAGES/HOME/icons8-double-up.gif" alt="">
             </div>
             
