--- a/404.html
+++ b/404.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/404.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/navbar.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/footer.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/shop/css/fontAwesome.css">
+    
 
 </head>
 <body>
