--- a/careers/index.html
+++ b/careers/index.html
@@ -324,7 +324,7 @@
 
     
 
-    <script src="../JS/backScroll.js"></script>
+    <script src="../JS/backscroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
     <!-- <script src="./crowdFunding.js"></script> -->
