--- a/404.html
+++ b/404.html
@@ -139,7 +139,7 @@
     <div class="footer">
         <div class="content">
             <div class="box one">
-                <div class="logo"><img src="../IMAGES/HOME/VR new logo white.webp" alt=""></div>
+                <div class="logo"><img src="https://velocitaracing.github.io/IMAGES/HOME/VR new logo white.webp" alt=""></div>
                 <p>Velocita Racing is an exclusive Combustion Class Formula Student Team from Ramaiah Institute of Technology, Bangalore, Karnataka IN</p>
                 <ul>
                     <li><a href="mailto:velocitaracing.rit@gmail.com?Subject=Hey%20Velocita!"><i class="fa fa-envelope fa-2x"></i></a></li>
