--- a/team/index.html
+++ b/team/index.html
@@ -212,61 +212,61 @@
           document.getElementById("season-heading").innerHTML = "2015-16"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season1').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season1').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
+        //         });
+        //     });
         });
         $(".season2").click(function(){
           document.getElementById("season-heading").innerHTML = "2016-17"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season2').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season2').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
+        //         });
+        //     });
         });
         $(".season3").click(function(){
           document.getElementById("season-heading").innerHTML = "2017-18"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season3').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season3').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
+        //         });
+        //     });
         });
         $(".season4").click(function(){
           document.getElementById("season-heading").innerHTML = "2018-19"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season4').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season4').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
+        //         });
+        //     });
         });
         $(".season5").click(function(){
           document.getElementById("season-heading").innerHTML = "2019-20"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season5').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season5').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/group-people-working-out-business-plan-office.webp)'});
+        //         });
+        //     });
         });
         $(".season6").click(function(){
           document.getElementById("season-heading").innerHTML = "2020-21"
         //   document.getElementById("propOne").innerHTML = "Hello JavaScript!"
         //   document.getElementById('myImage').src='./icons8-wrapped-gift-48.png'
-        $(document).ready(function(){
-                $('.season6').on("click", function(){
-                    $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
-                });
-            });
+        // $(document).ready(function(){
+        //         $('.season6').on("click", function(){
+        //             $('.heading').css({'background-image' : 'url(../IMAGES/HOME/silhouette-confident-businesspeople.webp)'});
+        //         });
+        //     });
         });
       </script>
   
