--- a/404.html
+++ b/404.html
@@ -50,6 +50,7 @@
                         <a href="https://velocitaracing.github.io/#about">ABOUT US</a>
                         <a href="https://velocitaracing.github.io/#cars">CARS</a>
                         <a href="https://velocitaracing.github.io/#team">OUR TEAM</a>
+                        <a href="https://velocitaracing.github.io/team">TEAM ALL SEASONS</a>
                     </div>
                 </div>
                
