--- a/team/index.html
+++ b/team/index.html
@@ -82,6 +82,7 @@
                         <a href="../../#about">ABOUT US</a>
                         <a href="../../#cars">CARS</a>
                         <a href="../../#team">OUR TEAM</a>
+                        <a href="../../team">TEAM ALL SEASONS</a>
                     </div>
                 </div>
                
@@ -184,8 +185,8 @@
                     <ul>
                         <li><a href="mailto:velocitaracing.rit@gmail.com?Subject=Hey%20Velocita!"><i class="fa fa-envelope fa-2x"></i></a></li>
                         <!-- <li><a href=""><i class="fa fa-phone fa-2x"></i></a></li> -->
-                        <li><a href="javascript:void(0);"><i class="fa fa-instagram fa-2x"></i></a></li>
-                        <li><a href="javascript:void(0);"><i class="fa fa-linkedin fa-2x"></i></a></li>                       
+                        <li><a target="_blank" href="https://instagram.com/niranjan.bharadwaj"><i class="fa fa-instagram fa-2x"></i></a></li>
+                        <li><a target="_blank" href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/"><i class="fa fa-linkedin fa-2x"></i></a></li>                       
                     </ul>
                 </div>
                 <div class="info"></div>
