--- a/team/season-2020/index.html
+++ b/team/season-2020/index.html
@@ -83,6 +83,7 @@
                         <a href="../../#about">ABOUT US</a>
                         <a href="../../../#cars">CARS</a>
                         <a href="../../../#team">OUR TEAM</a>
+                        <a href="../../team">TEAM ALL SEASONS</a>
                     </div>
                 </div>
                
@@ -204,8 +205,8 @@
                         <h5>Season 2020-21</h5>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <ul>
-                            <li><a href="https://www.instagram.com/olle_huduga_niranjan/"><i class="fa fa-instagram fa-2x"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/"><i class="fa fa-linkedin fa-2x"></i></a></li>                           
+                            <li><a target="_blank" href="https://instagram.com/niranjan.bharadwaj"><i class="fa fa-instagram fa-2x"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/"><i class="fa fa-linkedin fa-2x"></i></a></li>            
                         </ul>
                     </div>
                     <div class="info"></div>
