--- a/team/index.html
+++ b/team/index.html
@@ -276,7 +276,7 @@
                             new! 
                         </p>
                         <ul>
-                            <li><a href="mailto:soumyadeep.br@gmail.com?Subject=Hey%20Deep!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                            <!-- <li><a href="mailto:soumyadeep.br@gmail.com?Subject=Hey%20Deep!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <!-- <li><a href="tel:+91"><i class="fa fa-phone fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://www.instagram.com/d_night_owl/"><i class="fa fa-instagram fa-2x"></i></a></li>
                             <li><a target="_blank" href="https://www.linkedin.com/in/-deep/"><i class="fa fa-linkedin fa-2x"></i></a></li>   
@@ -297,7 +297,7 @@
                             asperiores magnam dolor autem repellat architecto.
                         </p>
                         <ul>
-                            <li><a href="mailto:karthik.raghunath980@gmail.com?Subject=Hey%20Karthik!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                            <!-- <li><a href="mailto:karthik.raghunath980@gmail.com?Subject=Hey%20Karthik!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <!-- <li><a href="tel:+91"><i class="fa fa-phone fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://instagram.com/karthik.r10"><i class="fa fa-instagram fa-2x"></i></a></li>
                             <li><a target="_blank" href="https://www.linkedin.com/in/karthik-raghunath-0691521a4"><i class="fa fa-linkedin fa-2x"></i></a></li>
@@ -319,7 +319,7 @@
                             I am a Bangalorean who is interested in social interaction and love going on long rides and drives. 
                         </p>
                         <ul>
-                            <li><a href="mailto:saikrishna.313@gmail.com?Subject=Hey%20SaiKrishna!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                            <!-- <li><a href="mailto:saikrishna.313@gmail.com?Subject=Hey%20SaiKrishna!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <!-- <li><a href="tel:+91"><i class="fa fa-phone fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://www.instagram.com/saikrishna.313/"><i class="fa fa-instagram fa-2x"></i></a></li>
                             <li><a target="_blank" href="www.linkedin.com/in/skp313"><i class="fa fa-linkedin fa-2x"></i></a></li>
@@ -339,7 +339,7 @@
                         <p>Just a guy trying new things. Fascinated by machines.
                         </p>
                         <ul>
-                            <li><a href="mailto:agathvegabonds@gmail.com?Subject=Hey%20Vachan!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                            <!-- <li><a href="mailto:agathvegabonds@gmail.com?Subject=Hey%20Vachan!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <!-- <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li> -->
                             <!-- <li><a href=""><i class="fa fa-instagram fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://www.linkedin.com/in/vachan-maruthi-99a098174"><i class="fa fa-linkedin fa-2x"></i></a></li>
@@ -359,7 +359,7 @@
                             Mechanical engineering is love. 
                         </p>
                         <ul>
-                            <li><a href="mailto:rijulmk2001@gmail.com?Subject=Hey%20Rijul!"><i class="fa fa-envelope fa-2x"></i></a></li>
+                            <!-- <li><a href="mailto:rijulmk2001@gmail.com?Subject=Hey%20Rijul!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://www.instagram.com/rijulmk/"><i class="fa fa-instagram fa-2x"></i></a></li>
                             <li><a target="_blank" href="https://www.linkedin.com/in/rijul-m-k-55998420a"><i class="fa fa-linkedin fa-2x"></i></a></li>
                            
