--- a/team/season-2020/index.html
+++ b/team/season-2020/index.html
@@ -318,7 +318,7 @@
                         <p>Passioneer, That says it all... A passionate Engineer.</p>
                         <ul>
                             <li><a target="_blank" href="https://www.instagram.com/saikrishna.313/"><i class="fa fa-instagram fa-2x"></i></a></li>
-                            <li><a target="_blank" href="www.linkedin.com/in/skp313"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/skp313"><i class="fa fa-linkedin fa-2x"></i></a></li>
                         </ul>
                     </div>
                     <div class="info"></div>
