--- a/team/index.html
+++ b/team/index.html
@@ -322,7 +322,7 @@
                             <!-- <li><a href="mailto:saikrishna.313@gmail.com?Subject=Hey%20SaiKrishna!"><i class="fa fa-envelope fa-2x"></i></a></li> -->
                             <!-- <li><a href="tel:+91"><i class="fa fa-phone fa-2x"></i></a></li> -->
                             <li><a target="_blank" href="https://www.instagram.com/saikrishna.313/"><i class="fa fa-instagram fa-2x"></i></a></li>
-                            <li><a target="_blank" href="www.linkedin.com/in/skp313"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/skp313"><i class="fa fa-linkedin fa-2x"></i></a></li>
                            
                         </ul>
                     </div>
