--- a/team/index.html
+++ b/team/index.html
@@ -64,6 +64,10 @@
     <link rel="stylesheet" href="../shop/css/fontAwesome.css">
 </head>
 <body>
+
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
     
     <div class="navbar">
         <!-- IMAGES/HOME/VR new logo.png -->
@@ -490,6 +494,19 @@
    -->
 
 
+   <script type="text/javascript">
+    //<![CDATA[
+        $(window).on('load', function() { // makes sure the whole site is loaded 
+            $('#status').fadeOut(); // will first fade out the loading animation 
+            $('#preloader').delay().fadeOut('slow'); // will fade out the white DIV that covers the website. 
+            $('body').delay(400).css({'overflow':'visible'});
+          })
+    //]]>
+    $('img').bind('contextmenu', function(e) {
+        return false;
+    }); 
+
+    </script>
     
     <!-- <script src="./team.js"></script> -->
     <script src="../JS/backscroll.js"></script>
