--- a/team/season-2019/index.html
+++ b/team/season-2019/index.html
@@ -65,6 +65,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
     
     <div class="navbar">
         <!-- IMAGES/HOME/VR new logo.png -->
@@ -355,6 +359,20 @@
         </div>
         <p>COPYRIGHT &COPY; 2021 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED</p>
     </div>
+
+    <script type="text/javascript">
+        //<![CDATA[
+            $(window).on('load', function() { // makes sure the whole site is loaded 
+                $('#status').fadeOut(); // will first fade out the loading animation 
+                $('#preloader').delay().fadeOut('slow'); // will fade out the white DIV that covers the website. 
+                $('body').delay(400).css({'overflow':'visible'});
+              })
+        //]]>
+        $('img').bind('contextmenu', function(e) {
+            return false;
+        }); 
+
+    </script>
 
     
     <!-- <script src="./team.js"></script> -->
