--- a/resources/index.html
+++ b/resources/index.html
@@ -102,7 +102,7 @@
                         <span class="fa fa-star-o"></span>
                         <span class="fa fa-star-o"></span>
                     </div>
-                    <div class="box">
+                    <div class="dept-box">
                         <div class=""><span class="dept">SUBSYSTEM: <span class="deptName">ALL</span></span></div>
                         <div class=""> <form target="_blank" action="https://drive.google.com/file/d/1XwdTMriF-83_wiHrK6oa2XjeSbXlMHXg/view?usp=sharing">
                             <input class="download" type="submit" value="READ"/>
@@ -126,7 +126,7 @@
                         <span class="fa fa-star-half-o checked"></span>
                         <span class="fa fa-star-o"></span>
                     </div>
-                    <div class="box">
+                    <div class="dept-box">
                         <div class=""><span class="dept">SUBSYSTEM: <span class="deptName">ALL</span></span></div>
                         <div class=""> <form target="_blank" action="https://drive.google.com/file/d/1w8m42DVJqjkY7QYtuTOVWtiND0XERfH2/view?usp=sharing">
                             <input class="download" type="submit" value="READ"/>
@@ -150,7 +150,7 @@
                         <span class="fa fa-star-o"></span>
                         <span class="fa fa-star-o"></span>
                     </div>
-                    <div class="box">
+                    <div class="dept-box">
                         <div class=""><span class="dept">SUBSYSTEM: <span class="deptName">ALL</span></span></div>
                         <div class=""> <form target="_blank" action="https://drive.google.com/file/d/1CP3cbQAogNIbGHOBNmZ8wzukTUZ18NlG/view?usp=sharing">
                             <input class="download" type="submit" value="READ"/>
@@ -174,7 +174,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star-o"></span>
                     </div>
-                    <div class="box">
+                    <div class="dept-box">
                         <div class=""><span class="dept">SUBSYSTEM: <span class="deptName">POWERTRAIN</span></span></div>
                         <div class=""> <form target="_blank" action="https://drive.google.com/file/d/1erJZbsZBUvcoMLb_MJkU4gF1lOnWcmuk/view?usp=sharing">
                             <input class="download" type="submit" value="READ"/>
