--- a/careers/index.html
+++ b/careers/index.html
@@ -58,12 +58,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="../CSS/loader.css">
+    <link rel="stylesheet" href="./CSS/app.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../shop/css/fontAwesome.css">
 </head>
 <body>
+
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
     
     <div class="navbar">
         <!-- IMAGES/HOME/VR new logo.png -->
@@ -325,6 +330,8 @@
 
     
 
+
+    <script src="../JS/loader.js"></script>
     <script src="../JS/backscroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
