--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -60,6 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
 
+    <link rel="stylesheet" href="../CSS/loader.css">
     <link rel="stylesheet" href="./CSS/app.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
@@ -69,6 +70,10 @@
     <script src="./JS/names.js"></script>
 </head>
 <body>
+
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
     
     <div class="navbar">
         <!-- IMAGES/HOME/VR new logo.png -->
@@ -529,6 +534,8 @@
       });
     </script> -->
 
+
+    <script src="../JS/loader.js"></script>
     <script src="./JS/backScroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
