--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ Dots/bullets/indicators
                     <div class="info-team">
                         <p>Velocita has a team of excellent engineers who work with complete dedication to keep velocita ahead in every aspect!<br><br>The team possesses the required skills and constantly upgrades them to meet the demands and achieve higher standards.<br><br>The leadership group shares a great camaraderie with the group members, enhancing the work experience in the team.<br><br>They aren't serious always, we do have fun at velocita.</p>
                     </div>
-                    <button class="team-button team-button-night"><a href="./team/">Team 2021-22</a></button>
+                    <button class="team-button team-button-night"><a href="./team/">TEAM 2021-22</a></button>
                     
                 </div>
                 <div class="team-image team-right">
@@ -1429,21 +1429,6 @@ Dots/bullets/indicators
 
 
 
-
-    <script type="text/javascript">
-        //<![CDATA[
-            $(window).on('load', function() { // makes sure the whole site is loaded 
-                $('#status').fadeOut(); // will first fade out the loading animation 
-                $('#preloader').delay().fadeOut('slow'); // will fade out the white DIV that covers the website. 
-                $('body').delay(400).css({'overflow':'visible'});
-              })
-        //]]>
-        $('img').bind('contextmenu', function(e) {
-            return false;
-        }); 
-
-    </script>
-
     <!-- <script>
         var swiper = new Swiper('.swiper-container', {
         pagination: {
@@ -1453,7 +1438,7 @@ Dots/bullets/indicators
     </script> -->
 
     
-
+    <script src="JS/loader.js"></script>
     <script src="JS/swiper.js"></script>
     <script src="JS/refresh.js"></script>
     <script src="JS/mobnav.js"></script>
