--- a/team/season-2020/index.html
+++ b/team/season-2020/index.html
@@ -57,8 +57,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-
-    <link rel="stylesheet" href="../app.css">
+    <link rel="stylesheet" href="../../CSS/loader.css">
+    <link rel="stylesheet" href="../CSS/app.css">
     <link rel="stylesheet" href="../../CSS/navbar.css">
     <link rel="stylesheet" href="../../CSS/footer.css">
     <link rel="stylesheet" href="../../shop/css/fontAwesome.css">
@@ -414,22 +414,9 @@
         <p>COPYRIGHT &COPY; 2021 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED</p>
     </div>
 
-
-    <script type="text/javascript">
-        //<![CDATA[
-            $(window).on('load', function() { // makes sure the whole site is loaded 
-                $('#status').fadeOut(); // will first fade out the loading animation 
-                $('#preloader').delay().fadeOut('slow'); // will fade out the white DIV that covers the website. 
-                $('body').delay(400).css({'overflow':'visible'});
-              })
-        //]]>
-        $('img').bind('contextmenu', function(e) {
-            return false;
-        }); 
-
-    </script>
    
     <!-- <script src="./team.js"></script> -->
+    <script src="../../JS/loader.js"></script>
     <script src="../../JS/backscroll.js"></script>
     <script src="../../JS/mobnav.js"></script>
     <script src="../../JS/ripple.js"></script>
