--- a/team/index.html
+++ b/team/index.html
@@ -177,7 +177,7 @@
         <div id="season2021" class="lead-card-container">
             <div class="lead-card capt-card">
                 <div class="lead-img">
-                    <img src="../IMAGES/TEAM/niranjan_new.png" alt="">
+                    <img src="../IMAGES/TEAM/team21/niranjan_new.webp" alt="niranjan-bharadwaj">
                 </div>
                 <div class="lead-info">
                     <h2>Niranjan Bharadwaj</h2>
@@ -199,7 +199,7 @@
             <div class="managers">
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../IMAGES/TEAM/vaibhav_new.png" alt="">
+                        <img src="../IMAGES/TEAM/team21/vaibhav_new.webp" alt="vaibhav-harinarayan">
                     </div>
                     <div class="lead-info">
                         <h2>Vaibhav Harinarayan</h2>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/satvik_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/team21/satvik_new.webp" alt="satvik-s">
                     </div>
                     <div class="lead-info">
                         <h2>Satvik S</h2>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../IMAGES/TEAM/sanjeev_new.png" alt="">
+                        <img src="../IMAGES/TEAM/team21/sanjeev_new.webp" alt="sanjeev-kumar-s">
                     </div>
                     <div class="lead-info">
                         <h2>Sanjeev Kumar</h2>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../IMAGES/TEAM/soumyadeep_new.png" alt="">
+                        <img src="../IMAGES/TEAM/team21/soumyadeep_new.webp" alt="">
                     </div>
                     <div class="lead-info">
                         <h2>Soumyadeep</h2>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../IMAGES/TEAM/karthik_new.png" alt="">
+                        <img src="../IMAGES/TEAM/team21/karthik_new.webp" alt="karthik-raghunath">
                     </div>
                     <div class="lead-info">
                         <h2>Karthik Raghunath</h2>
@@ -335,7 +335,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/vachan_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/team21/vachan_new.webp" alt="vachan-maruthi">
                     </div>
                     <div class="lead-info">
                         <h2>Vachan M</h2>
@@ -354,7 +354,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/riju_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../IMAGES/TEAM/team21/riju_new.webp" alt="rijul-m-k">
                     </div>
                     <div class="lead-info">
                         <h2>Rijul MK</h2>
