--- a/team/season-2020/index.html
+++ b/team/season-2020/index.html
@@ -181,7 +181,7 @@
         <div id="season2020" class="lead-card-container">
             <div class="lead-card capt-card">
                 <div class="lead-img">
-                    <img src="../../IMAGES/TEAM/pranay_new.png" alt="">
+                    <img src="../../IMAGES/TEAM/team21/pranay_new.webp" alt="pranay-ketineni">
                 </div>
                 <div class="lead-info">
                     <h2>Pranay Ketineni</h2>
@@ -202,7 +202,7 @@
             <div class="managers">
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/niranjan_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/niranjan_new.webp" alt="niranjan-bharadwaj">
                     </div>
                     <div class="lead-info">
                         <h2>Niranjan Bharadwaj</h2>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/bharat_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/bharat_new.webp" alt="bharat-v-hiremath">
                     </div>
                     <div class="lead-info">
                         <h2>Bharat V Hiremath</h2>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/vaibhav_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/vaibhav_new.webp" alt="vaibhav-harinarayan">
                     </div>
                     <div class="lead-info">
                         <h2>Vaibhav Harinarayan</h2>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/sanjeev_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/sanjeev_new.webp" alt="sanjeev-kumar-s">
                     </div>
                     <div class="lead-info">
                         <h2>Sanjeev Kumar</h2>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/satvik_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/team21/satvik_new.webp" alt="satvik-s">
                     </div>
                     <div class="lead-info">
                         <h2>Satvik S</h2>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/soumyadeep_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/soumyadeep_new.webp" alt="">
                     </div>
                     <div class="lead-info">
                         <h2>Soumyadeep</h2>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/karthik_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/karthik_new.webp" alt="karthik-raghunath">
                     </div>
                     <div class="lead-info">
                         <h2>Karthik Raghunath</h2>
@@ -314,7 +314,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img src="../../IMAGES/TEAM/saiKrishna_new.png" alt="">
+                        <img src="../../IMAGES/TEAM/team21/saiKrishna_new.webp" alt="saiKrishna">
                     </div>
                     <div class="lead-info">
                         <h2>Sai Krishna P</h2>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/vachan_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/team21/vachan_new.webp" alt="vachan-maruthi">
                     </div>
                     <div class="lead-info">
                         <h2>Vachan M</h2>
@@ -345,7 +345,7 @@
                 </div>
                 <div class="lead-card manager-card">
                     <div class="lead-img">
-                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/riju_new.png" alt="">
+                        <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="../../IMAGES/TEAM/team21/riju_new.webp" alt="rijul-m-k">
                     </div>
                     <div class="lead-info">
                         <h2>Rijul MK</h2>
