--- a/links/index.html
+++ b/links/index.html
@@ -41,12 +41,12 @@
             </ul>
         </div>
     </div>
-    <div class="footer-image">
-      <!-- <img src="../IMAGES/HOME/footer.png" alt="footer image"> -->
-  </div>
+    <!-- <div class="footer-image">
+      <img src="../IMAGES/HOME/footer.png" alt="footer image">
+  </div> -->
 
   <div class="footer">
-      <div class="content">
+      <!-- <div class="content">
           <div class="box one">
               <div class="logo"><img src="../IMAGES/HOME/VR new logo white.webp" alt=""></div>
               <p>Velocita Racing is an exclusive Combustion Class Formula Student Team from Ramaiah Institute of Technology, Bangalore, Karnataka IN</p>
@@ -75,7 +75,7 @@
           <div class="box three">
               <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.0701973220653!2d77.56377431413576!3d13.031201717095128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae176357ea8ee5%3A0x6e434f12ca381f25!2sVelocita%20Racing!5e0!3m2!1sen!2sin!4v1617909491971!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
-      </div>
+      </div> -->
       <p>COPYRIGHT &COPY; 2021 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED</p>
   </div>
  
