--- a/links/index.html
+++ b/links/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-sca;able=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Velocita Racing Links</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../CSS/social.css">
