--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Velocita Racing Blog | Lookinto our publications, technology, stories and much more. Take a peek in our racing world">
-    <meta name="keywords" content="velocita racing, velocita racing website, Velocita blog, Ramaiah blog, velocita website, velocita racing website, blogs, Racing, Bangalore, Bengaluru, Racing blog, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
+    <meta name="description" content="Velocita Racing Crowdfunding">
+    <meta name="keywords" content="velocita racing, velocita funds, velocita crowdfunding, velocitaracing funds, velocitaracing fundraiser, velocitaracing sponsorship,velocitaracing sponsor, velocita racing website, Velocita Crowd Funding, Ramaiah Crowd funding, velocita website, velocita racing website, velocitaracing crowdfunding, Racing, Bangalore, Bengaluru, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <title>Crowd Funding | Velocita Racing</title>
     <meta name="author" content="Soumyadeep Guchhait">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
        
  
-        "url": "https://velocitaracing.github.io/crowd-funding/",
+        "url": "https://velocitaracing.github.io/crowdfunding/",
        
         "@type": "SportsTeam",
         "name": "Velocita Racing",
