--- a/team/index.html
+++ b/team/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Get to know our racing journey and find an area of interest that suits you the best! Choose over 15 student career areas. Didnt find what you're looking to work on? Leave us an open application.">
-    <meta name="keywords" content="velocita racing, careers at velocita racing, careers, velocita racing departments, velocita racing sub systems, velocitaracing technical, velocita racing website, Velocita blog, Ramaiah blog, velocita website, velocita racing website, blogs, Racing, Bangalore, Bengaluru, Racing blog, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
+    <meta name="keywords" content="velocita racing team, velocita team, velocita racing alumini, velocita racing seniors, velocita racing current team, velocita racing team 2021, velocitaracing careers, careers at velocita racing, careers, velocita racing departments, velocita racing sub systems, velocitaracing technical, velocita racing website, Velocita blog, Ramaiah blog, velocita website, velocita racing website, blogs, Racing, Bangalore, Bengaluru, Racing blog, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <title>Team | Velocita Racing</title>
     <meta name="author" content="Soumyadeep Guchhait">
     <script type="application/ld+json">{
