--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Velocita Racing Crowdfunding">
     <meta name="keywords" content="velocita racing, velocita funds, velocita crowdfunding, velocitaracing funds, velocitaracing fundraiser, velocitaracing sponsorship,velocitaracing sponsor, velocita racing website, Velocita Crowd Funding, Ramaiah Crowd funding, velocita website, velocita racing website, velocitaracing crowdfunding, Racing, Bangalore, Bengaluru, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
-    <title>Sponsor | Velocita Racing</title>
+    <title>Sponsor Us | Velocita Racing</title>
     <meta name="author" content="Soumyadeep Guchhait">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
@@ -149,7 +149,7 @@
 
 
     <section id="home">
-      <h1>Sponsors</h1>
+      <h1>Sponsor Our Project</h1>
       <p>Under Maintainence</p>
       <img src="../IMAGES/HOME/icons8-double-up.gif" alt="">
     </section>
@@ -267,7 +267,7 @@
   <div class="footer-image">
       <!-- <img src="../IMAGES/HOME/footer.png" alt="footer image"> -->
   </div>
-
+  
   <div class="footer">
       <div class="content">
           <div class="box one">
